--- a/src/main/resources/static/css/base/background.css
+++ b/src/main/resources/static/css/base/background.css
@@ -15,7 +15,7 @@ header,
 
     /* Center and scale the image nicely */
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 }
 
